<resources>
    <string name="app_name">Nauka programowania</string>
    <string name="APP_AUTHOR">Angelika Owczarek</string>
    <string name="compilation_error">Błąd kompilacji. Nie da się uruchomić tego kodu.</string>
    <string name="split_generate_message">Wciśnij strzałkę by wygenerować Twój kod!</string>
    <string name="action_clear">Wyczyść</string>
    <string name="action_load">Wczytaj</string>
    <string name="action_run">URUCHOM</string>
    <string name="action_code">Pokaż kod w Javascript</string>
    <string name="action_save">Zapisz</string>
    <string name="level_name_regex_1">com.github.angelikaowczarek.naukaprogramowania:drawable/button_number</string>

    <string name="blockly_toolbox_default_category_name">Bloki</string>
    <string name="rename_variable">Zmień nazwę zmiennej\u2026"</string>
    <string name="delete_variable">Usuń zmienną\u2026"</string>
    <string name="create_variable">Nowa zmienna</string>
    <string name="delete_variable_title">Usuń zmienną</string>
    <string name="delete_variable_confirm">Usunąć zmienną %1$s i %2$d bloki jej używające?</string>
    <string name="delete_variable_positive">Usuń</string>
    <string name="delete_variable_negative">Anuluj</string>
    <string name="name_variable_title">Nazwa zmiennej</string>
    <string name="name_variable_message">Nowa nazwa zmiennej</string>
    <string name="rename_variable_message">Zmień nazwę zmiennej z "%s"</string>
    <string name="name_variable_positive">OK</string>
    <string name="name_variable_negative">Anuluj</string>
    <string name="cannot_delete_variable_procedure">Nie można usunąć zmiennej \"%1$s\", ponieważ jest częścią definicji funkcji \"%2$s\".</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="mutator_ifelse_edit_title">Zaktualizuj blok warunkowy</string>
    <string name="mutator_ifelse_edit_ifelse_count">Ilość warunków \"jeśli\": %d</string>
    <string name="mutator_ifelse_edit_has_else">Dodać blok \"w przeciwnym razie\"?</string>
    <string name="mutator_ifelse_label_if">jeśli</string>
    <string name="mutator_ifelse_label_else_if">w przeciwnym razie, jeśli</string>
    <string name="mutator_ifelse_label_then">wykonaj</string>
    <string name="mutator_ifelse_label_else">w przeciwym razie</string>
    <string name="instructions">START:\n\nNa początek zacznij od rozwiązywania kolejnych poziomów zabawy. Będą one stopniowo uczyły Cię, jakich wyrażeń i instrukcji używa się w programowaniu. Może okazać się, że część zagadnień już znasz i rozumiesz - wtedy możesz przeskoczyć o kilka tematów. Każdy kolejny temat wymaga znajomości poprzednich.\n\n\nPIASKOWNICA:\n\nPiaskownica zawiera wszystkie instrukcje poznawane w trakcie rozwiązywania poziomów. Możesz tutaj poćwiczyć nabyte umiejętności. W tym miejscu nie ma zadań - liczy się Twoja kreatywność :)\n\nJeśli czujesz się swobodnie w używaniu poznanych instrukcji możesz śmiało spóbować \"prawdziwego\" programowania! Powodzenia!</string>
    <string name="about">Nauka programowania wersja 1.0\n\nAplikacja została utworzona w ramach pracy inżynierskiej \"Projekt i implementacja aplikacji do nauki podstaw programowania dla dzieci\" na Akademii Górniczo-Hutniczej.\n\nAutor aplikacji: Angelika Owczarek.</string>
    <string name="action_instructions">Instrukcje</string>
    <string name="back_button">Powrót</string>
    <string name="header_instructions">Instrukcje</string>
    <string name="header_about">O aplikacji</string>
    <string name="logo">Nauka programowania</string>
    <string name="button_start">Start</string>
    <string name="button_sandbox">Piaskownica</string>
    <string name="button_instructions">Instrukcje</string>
    <string name="button_about">O aplikacji</string>
    <string name="header_levels">Poziomy</string>
</resources>
