<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_clear"
        android:icon="@android:drawable/ic_delete"
        android:orderInCategory="11"
        android:title="@string/action_clear"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_run"
        android:icon="@drawable/ic_play_arrow_white_24dp"
        android:orderInCategory="10"
        android:title="@string/action_run"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_file_download_white_24dp"
        android:orderInCategory="12"
        android:title="@string/action_save"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_load"
        android:icon="@drawable/ic_file_upload_white_24dp"
        android:orderInCategory="13"
        android:title="@string/action_load"
        app:showAsAction="never" />
</menu>