<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:background="@drawable/background"
    tools:context="com.github.angelikaowczarek.naukaprogramowania.MainActivity">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/logo"/>

    <TextView
        android:id="@+id/authorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="serif-monospace"
        android:text="@string/APP_AUTHOR"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImageView"
        android:layout_marginEnd="16dp" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/buttonsConstraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authorTextView"
        app:layout_constraintVertical_bias="0.507">

        <ImageButton
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="24dp"
            android:adjustViewBounds="true"
            android:onClick="runLevelsListActivity"
            android:padding="0dp"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toTopOf="@+id/sandboxButton"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/button_start"
            android:contentDescription="@string/button_start" />

        <ImageButton
            android:id="@+id/sandboxButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:adjustViewBounds="true"
            android:onClick="runSandboxActivity"
            android:padding="0dp"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toTopOf="@+id/settingsButton"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/button_piaskownica"
            android:contentDescription="@string/button_sandbox" />

        <ImageButton
            android:id="@+id/settingsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:adjustViewBounds="true"
            android:onClick="runInstructionsActivity"
            android:padding="0dp"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toTopOf="@+id/aboutAppButton"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/button_instrukcje"
            android:contentDescription="@string/button_instructions" />

        <ImageButton
            android:id="@+id/aboutAppButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:adjustViewBounds="true"
            android:onClick="runAboutActivity"
            android:padding="0dp"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/button_o_aplikacji"
            android:contentDescription="@string/button_about"/>
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
